fixed unicode bug in MailDispatcher.send_mail and refactored some methods

--- a/tests/config.cfg
+++ b/tests/config.cfg
@@ -5,8 +5,8 @@ db_catalog = auth_db_database
 smtp_host = localhost
 smtp_port = 25
 mail_from = webmaster@your-site.com
-mail_body = This is a test \r\n
-    And another line \r\n
+mail_body = This is a test
+    And another line
     And a placeholder {ACTIVATION_TOKEN}
 mail_activation_expire = 86400    
 password_min_length = 6
